docs/2021.1/whats-new.md
:omit-from-search

# What's new

:div class="whats-new"

Check back here to learn about all the latest changes to Flipside.

**2021.1.8-stable**<br>
<span>[Studio Changelog](/docs/2021.1/studio/changelog#202118-stable) &middot; [Creator Tools Changelog](/docs/2021.1/creator-tools/changelog#202118-stable)</span><br>
<small>July 29, 2021</small><br>
Added a panel version of the desktop mirror that is hidden from cameras, along with a few other bug fixes and minor improvements.

**2021.1.7-stable**<br>
<span>[Studio Changelog](/docs/2021.1/studio/changelog#202117-stable) &middot; [Creator Tools Changelog](/docs/2021.1/creator-tools/changelog#202117-stable)</span><br>
<small>June 8, 2021</small><br>
Fixed an input issue preventing selection of characters and sets when using Oculus via SteamVR.

**2021.1.6-stable**<br>
<span>[Studio Changelog](/docs/2021.1/studio/changelog#202116-stable) &middot; [Creator Tools Changelog](/docs/2021.1/creator-tools/changelog#202116-stable)</span><br>
<small>May 27, 2021</small><br>
Fixed compatibility issues with Windows Mixed Reality headsets through SteamVR, and changed the menu show/hide for Oculus users on SteamVR to a joystick press since SteamVR overrides the menu button.

**2021.1.5-stable**<br>
<span>[Studio Changelog](/docs/2021.1/studio/changelog#202115-stable) &middot; [Creator Tools Changelog](/docs/2021.1/creator-tools/changelog#202115-stable)</span><br>
<small>May 18, 2021</small><br>
Fixed a regression causing second screen output to be 720 instead of 1080 resolution.

**2021.1.4-stable**<br>
<span>[Studio Changelog](/docs/2021.1/studio/changelog#202114-stable) &middot; [Creator Tools Changelog](/docs/2021.1/creator-tools/changelog#202114-stable)</span><br>
<small>May 11, 2021</small><br>
Upgraded server-based multiplayer to the faster Normcore 2, minor performance improvements.

**2021.1.3-stable**<br>
<span>[Studio Changelog](/docs/2021.1/studio/changelog#202113-stable) &middot; [Creator Tools Changelog](/docs/2021.1/creator-tools/changelog#202113-stable)</span><br>
<small>April 22, 2021</small><br>
Fixes an issue with calibrating with Vive trackers then calibrating again without, exporting finger movements, and publishing timeouts in the Creator Tools.

**2021.1.2-stable**<br>
<span>[Studio Changelog](/docs/2021.1/studio/changelog#202112-stable) &middot; [Creator Tools Changelog](/docs/2021.1/creator-tools/changelog#202112-stable)</span><br>
<small>April 15, 2021</small><br>
Fixes puppeteering bug causing the character to disappear from cameras.

**2021.1.1-stable**<br>
<span>[Studio Changelog](/docs/2021.1/studio/changelog#202111-stable) &middot; [Creator Tools Changelog](/docs/2021.1/creator-tools/changelog#202111-stable)</span><br>
<small>April 8, 2021</small><br>
Fixes bugs with sitting, characters with no finger bones, and others, and adds adjustable elbow settings and example scene for the new TeleprompterElement component.

**2021.1.0-stable**<br>
<span>[Studio Changelog](/docs/2021.1/studio/changelog#202110-stable) &middot; [Creator Tools Changelog](/docs/2021.1/creator-tools/changelog#202110-stable)</span><br>
<small>March 30, 2021</small><br>
Motion capture data export, video renderer, stand-ins, all-new retargeting system, and much more.

**2020.1.4-stable**<br>
<span>[Studio Changelog](/docs/2021.1/studio/changelog#202012-stable) &middot; [Creator Tools Changelog](/docs/2021.1/creator-tools/changelog#202014-stable)</span><br>
<small>November 12, 2020</small><br>
Fixed several bugs including one causing crashes for some users, another causing long startup times on SteamVR, and one preventing previewing sets in the Unity editor before building and uploading them.

**2020.1.3-stable**<br>
<span>[Studio Changelog](/docs/2021.1/studio/changelog#202012-stable) &middot; [Creator Tools Changelog](/docs/2021.1/creator-tools/changelog#202013-stable)</span><br>
<small>October 28, 2020</small><br>
Fixed Oculus Link microphone selection bug, sets not always updating correctly, slideshow auto-start. Improved PooledAudioElement as a general-purpose AudioSource replacement, and other improvements to the Creator Tools.

**2020.1.2-stable**<br>
<span>[Studio Changelog](/docs/2021.1/studio/changelog#202012-stable) &middot; [Creator Tools Changelog](/docs/2021.1/creator-tools/changelog#202012-stable)</span><br>
<small>August 28, 2020</small><br>
Improved body physics collider generator including minimal, default, and full options, and a number of other bug fixes and improvements.

**2020.1.1-stable**<br>
<span>[Studio Changelog](/docs/2021.1/studio/changelog#202011-stable) &middot; [Creator Tools Changelog](/docs/2021.1/creator-tools/changelog#202011-stable)</span><br>
<small>July 16, 2020</small><br>
This update fixes issues preventing use on Oculus Quest via Oculus Link, as well as a number of other bug fixes.

**2020.1.0-stable**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/81/flipside-studio-20201-now-available)</span><br>
<small>June 25, 2020</small><br>
Flipside Studio and Flipside Creator Tools 2020.1 include a ton of new features and fixes, bringing you a faster, more flexible, and more streamlined real-time animation platform.

**2020.1.0-rc2**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/83/flipside-studio-20201-release-candidate-2)</span><br>
<small>June 1, 2020</small><br>
The second release candidate features minor improvements and a number of important bug fixes as we get closer to a new stable Flipside Studio release.

**2020.1.0-rc1**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/80/update-38-flipside-studio-release-candidate-1)</span><br>
<small>May 21, 2020</small><br>
The first release candidate for a new stable Flipside Studio is here. Includes no new features but several bug fixes.

**Update #37**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/79/update-37-stream-directly-zoom-skype-etc)</span><br>
<small>May 11, 2020</small><br>
Stream directly to Zoom, Skype, etc. in Flipside Studio, added menu option to duplicate characters and sets in the Flipside Creator Tools, and other fixes and improvements.

**Update #36**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/78/update-36-auto-scrolling-teleprompter-update-saved-setups)</span><br>
<small>April 23, 2020</small><br>
Auto-scrolling teleprompter, saved setups are now editable, and a number of bug fixes and improvements to both Flipside Studio and the Flipside Creator Tools plugin for Unity.

**Update #35**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/77/update-35-eye-realism-camera-switcher-improvements-texture-b)</span><br>
<small>April 2, 2020</small><br>
Improved eye movement realism, in-VR camera switcher now in the Show Tools menu, SteamVR finger pointing fixed, delete saved setups, and lots of other fixes and improvements.

**Update #34**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/76/update-34-twitch-interactions-sets-choose-your-own-adventure)</span><br>
<small>March 10, 2020</small><br>
Trigger events in sets from Twitch comments, build shared choose-your-own-adventures, many Flipside Creator Tools improvements, and a number of bug fixes.

**Update #33**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/75/update-33-major-improvements-flipside-creator-tools)</span><br>
<small>February 19, 2020</small><br>
Major improvements to the Flipside Creator Tools including testing interactions in VR without leaving Unity, new ways of triggering events, a scoring system with guns and targets, and audio pooling for better performance. Flipside Studio now supports more than 8 cameras on the in-VR camera switcher, and many bug fixes.

**Update #32a, #32b**<br>
<small>January 14, 2020</small><br>
Fixes for teleprompter in playback/overdubbing, combo texture facial expressions, ghost mode object movement in playback, ToggleElement  on characters with body physics, and object respawning.

**Update #32**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/74/flipside-update-32-server-based-multiplayer)</span><br>
<small>December 12, 2019</small><br>
Server-based multiplayer option, texture-based faces can now support blinking and expressions, improved voice recording quality, and various other bug fixes and improvements.

**Update #31a, #31b**<br>
<small>November 25, 2019</small><br>
Vive controller initialization fix. Disabled validation check that broke some characters with colliders. Fixed potential error if characters have a list of eyes with unassigned values. Potential source of error fixed in Creator Tools v0.27 as well.

**Update #31**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/71/flipside-update-31-character-body-physics-unity-2019-and-mor)</span><br>
<small>November 4, 2019</small><br>
Body physics on characters, upgraded Unity compatibility to 2019.2, object cloning in Set Builder, NDI output support, 2-3x faster launch time, and other performance optimizations and reliability improvements. Creator Tools now supports teleporting around sets, seeing your controllers in VR including interacting with colliders and toggles, and testing facial expressions just like you'd control them in Flipside Studio.

**Update #30a**<br>
<small>August 29, 2019</small><br>
Several bug fixes to multiplayer, slideshow, reliability, and performance improvements, Flipside Creator Tools updated to v0.23.

**Update #30**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/69/flipside-update-30-save-your-setups)</span><br>
<small>August 1, 2019</small><br>
Save snapshots of your setups, smoothing on local user movement, many other bug fixes.

**Update #29c**<br>
<small>June 28, 2019</small><br>
Bug fixes related to multiplayer synchronization, interactions, event triggers, and user modes, as well as an app freeze fix and a few more.

**Update #29b**<br>
<small>June 12, 2019</small><br>
Multiplayer connection improvements, combine facial expression modes on one character, interaction and UI improvements, access the menu while recording, Vive Tracker orientation fixes, and other bug fixes.

**Update #29a**<br>
<small>May 30, 2019</small><br>
New chair marker in Show Tools menu, eye targets added to the Creator Tools package for Unity, various fixes for multiplayer, playback, background sync, and synchronizing state of colliders and toggles.

**Update #29**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/68/flipside-update-29-background-sync-thumbs-fingers-and-more)</span><br>
<small>May 23, 2019</small><br>
Background sync for recordings, thumb and finger improvements, multiplayer connection reliability, and various bug fixes.

**Update #28**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/67/flipside-update-28-take-seat)</span><br>
<small>May 14, 2019</small><br>
Characters can sit in chairs, teleport to actor marks and other targets, star takes to keep track of the good ones, guest collaboration sidebar, smooth world rotation in build and ghost mode, and a ton of fixes.

**Update #27**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/65/flipside-update-27-character-improvements-reduced-save-times)</span><br>
<small>April 22, 2019</small><br>
Character improvements, reduced save times, slideshow playback fix.

**Update #26**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/64/flipside-update-26-multiplayer-improvements)</span><br>
<small>April 15, 2019</small><br>
Multiplayer backend upgrade, microphone input fix, and several multiplayer-related bug fixes.

**Update #25**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/63/flipside-update-25-multi-monitor-desktop-mirror-microphone-i)</span><br>
<small>April 10, 2019</small><br>
Desktop mirror multi-monitor support, embed your desktop in custom sets, switch microphone input devices in app, bloom post-processing effect setting, and lots of bug fixes.

**Update #24**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/62/flipside-update-24-ghost-mode-and-ton-bug-fixes)</span><br>
<small>March 22, 2019</small><br>
Go invisible with Ghost Mode, clearing sets got a little safer, and a ton of bug fixes related to multiplayer, character and set importing, and more.

**Update #23**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/61/flipside-update-23-desktop-mirror-looping-360-videos-many-fi)</span><br>
<small>March 6, 2019</small><br>
Desktop mirror prop in VR (experimental), looping 360 video skyboxes, example set added to the Creator Tools, new bug reporter under Settings > Support, and lots of bug fixes.

**Update #22**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/60/flipside-update-22-seeing-yourself-and-beta-bug-fixes)</span><br>
<small>February 13, 2019</small><br>
See your character while acting, start using Flipside while assets are still loading, improved texture caching, improve collisions on hands in playback, embedded camera fixes, and various fixes for characters.

**Update #21**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/58/flipside-update-21-faster-character-loading-and-multiplayer)</span><br>
<small>Janurary 11, 2019</small><br>
Improved multiplayer recording stability, improved character preview load times, fixed recordings freezing on ACTION, added Facebook streaming through Oculus, fixed duplicate cameras loading on sets, reduced file sizes for multiplayer recording, fixed issue with scale and snappable planes in Set Builder mode and many other bug fixes and improvements.

**Update #20a**<br>
<small>December 18, 2018</small><br>
Fixed app loading issue, colliders triggering too soon on playback, characters in T-pose in camera previews, friends panel and handheld scaling, and added notification sound for invites and friend requests. Fixed imported props, respawned objects, POV cameras and handheld camera timer over multiplayer.

**Update #20**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/56/flipside-studio-update-20-flipside-goes-multiplayer)</span><br>
<small>December 14, 2018</small><br>
Cross-platform multiplayer! Major updates to the Flipside Creator Tools to support multiple face meshes, jaw bones, custom collisions between objects, invisible elements on characters, Unity timelines sync with Flipside recordings, Google Drive links working with slideshow, and more.

**Alpha Update #19**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/55/flipside-alpha-update-19-teleporter-20-set-builder-snapping)</span><br>
<small>November 23, 2018</small><br>
Teleporter 2.0, Set Builder mode improved snapping, and many bug fixes including more natural thumb positions, Director Mode fixes, eyes in playback, improved foot stepping, menu improvements, and slideshow components all work independently of each other.

**Alpha Update #18**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/54/flipside-alpha-update-18-showhide-menu-camera-movement-setti)</span><br>
<small>October 16, 2018</small><br>
Show/hide the palette menu, camera movement and easing settings, support for importing Unity's Cinemachine virtual cameras in custom sets, new Featured category under Characters and Sets, and lots of bug fixes and smaller improvements.

**Alpha Update #17**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/51/flipside-alpha-update-17-animate-objects-shadow-settings-and)</span><br>
<small>September 20, 2018</small><br>
Animate objects in Director Mode, 360 video support, settings panel for slideshow, teleprompter, Twitch chat and shadows, shadow settings and quality control, desktop view in Flipside, Wolf3D avatar support, screen elements in custom sets, and various fixes.

**Alpha Update #16**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/45/flipside-alpha-update-16-experimental-director-mode-import-a)</span><br>
<small>September 6, 2018</small><br>
Experimental new Director Mode, animate faces with Unity animations, sync imported animations and audio with Flipside recordings, import custom cameras in sets, trigger events in sets, and tons of bug fixes.

**Alpha Update #15**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/44/flipside-alpha-update-15-new-characters-vlogger-set-and-load)</span><br>
<small>August 9, 2018</small><br>
New lion and crocodile characters, new vlogger living room set, working clock prop, resizable preview monitors, auto-hide mouse cursor, and several other fixes and improvements.

**Alpha Update #14**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/43/flipside-alpha-update-14-improved-lip-sync-accuracy-camera-z)</span><br>
<small>July 26, 2018</small><br>
Much improved lip sync timing, handheld camera zoom using the joystick/thumbpad, in-VR camera switcher fixes, other bug fixes.

**Alpha Update #13**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/41/flipside-alpha-update-13)</span><br>
<small>July 13, 2018</small><br>
In-VR camera switcher! Fullscreen mode for easier video capture! New "Bones" character! New light prop for dynamic lighting! Minor improvements incl: Up to 3 textures on custom prop imports, lighting fixes on various sets, more accurate button pressing on faster movement, feet feel more natural, and new users no longer have to register before getting into the app.

**Alpha Update #12**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/40/flipside-alpha-update-12)</span><br>
<small>June 15, 2018</small><br>
Shared characters and sets! In-VR slideshow and teleprompter controllers! Actor marks for easier setup of shots and knowing where to stand, lots of bug fixes, and our first Flipside contest!

**Alpha Update #11**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/34/flipside-alpha-update-11)</span><br>
<small>May 18, 2018</small><br>
New characters! A giraffe, an elephant, and a goblin! Twitch chat panel for interacting with Twitch audiences, improved loading notices and alerts, fixed lip sync playback bug, wonky knees, and hand positioning for Vive users.

**Alpha Update #10**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/29/flipside-alpha-update-10)</span><br>
<small>May 2, 2018</small><br>
Import your own custom sets! Realistic hair, cloth, and tail movement. Simplified lip syncing, toggle camera shake, improved teleporter, and many many bug fixes.

**Alpha Update #9**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/28/flipside-alpha-update-9)</span><br>
<small>April 10, 2018</small><br>
Import 360 photos as custom skies, improved keyboard camera controls, transparency on imported props, slideshow fixes for real-time streaming, and other fixes.

**Alpha Update #8**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/26/flipside-alpha-update-8)</span><br>
<small>April 3, 2018</small><br>
Slideshow plays YouTube, live streams, hand fixes, holding props on start of recordings, Twitter sharing improved, and other bug fixes.

**Alpha Update #7**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/25/flipside-alpha-update-7)</span><br>
<small>March 27, 2018</small><br>
Mixed Reality mode (preview), viking props, bug fixes, Oculus controls improved through SteamVR, updated [[Creator Tools]] with scale fixes.

**Alpha Update #6**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/23/flipside-alpha-update-6)</span><br>
<small>March 20, 2018</small><br>
Stickman characters, character importer movement previews, character importer texture fixes.

**Alpha Update #5**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/22/flipside-alpha-update-5)</span><br>
<small>March 6, 2018</small><br>
Major character importer improvements, texture fixes on imported props, three new characters, and other fixes/improvements.

**Alpha Update #4**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/19/flipside-alpha-update-4)</span><br>
<small>Feb 27, 2018</small><br>
Two new characters, object highlighting, various bug fixes.

**Alpha Update #3**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/18/flipside-alpha-update-3)</span><br>
<small>Feb 21, 2018</small><br>
Slideshow video fixes, eye movement fixes, magic pencil defaults to black, Unity upgrade to project and [[Creator Tools]], minor improvements.

**Alpha Update #2**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/17/flipside-alpha-update-2)</span><br>
<small>Feb 15, 2018</small><br>
In-app tutorials added, audio sync fixes, slideshow Dropbox compatibility, redesigned hands, fixes to UI, calibration, character importing, teleporter, and more.

**Alpha Update #1**<br>
<span>[Blog Post](https://www.flipsidexr.com/blog/post/14/flipside-alpha-update-1)</span><br>
<small>Jan 12, 2018</small><br>
Create your own characters, HTC Vive Tracker support, handheld camera improvements, many user interface improvements.

:/div
